syntax = "proto3";

package news.v1;

import "google/api/annotations.proto";

option go_package = "github.com/realotz/whole/api/news/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.news.v1";
option java_outer_classname = "MessageProtoV1";

//消息服务
service MessageService {
  // 消息列表
  rpc List (MessageListOption) returns (MessageList)  {
    option (google.api.http) = {
      get: "/users/message",
    };
  }
  //消息详情
  rpc Get (MessageGetOption) returns (Message)  {
    option (google.api.http) = {
      get: "/users/message/{id}",
    };
  }
  //标记已都
  rpc Read (MessageGetOption) returns (Message)  {
    option (google.api.http) = {
      get: "/users/message/read/{id}",
    };
  }
  // 发送一个消息
  rpc Send (MessageGetOption) returns (Message)  {
    option (google.api.http) = {
      post: "/users/message",
    };
  }
  // 删除消息
  rpc Delete (MessageDeleteOption) returns (Message)  {
    option (google.api.http) = {
      delete: "/users/message/{id}",
    };
  }
}

message MessageListOption {
  string name = 1;
}

message MessageGetOption {
  int64 id = 1;
}

message MessageUpdateOption {
  string name = 1;
}

message MessageCreateOption {
  string name = 1;
}

message MessageDeleteOption {
  int64 id = 1;
}

message MessageList {
  string message = 1;
}

message Message{

}
